tests/snapshots/yaml_suite_snapshots__yaml_suite_NAT4_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Various empty or newline only quoted strings
  from: "@perlpunk"
  tags: double scalar single whitespace
  yaml: "---\na: '\n  '\nb: '␣␣\n  '\nc: \"\n  \"\nd: \"␣␣\n  \"\ne: '\n\n  '\nf: \"\n\n  \"\ng: '\n\n\n  '\nh: \"\n\n\n  …"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n   =VAL '␣\n   =VAL :b\n   =VAL '␣\n   =VAL :c\n   =VAL…"
  json: "{\n  \"a\": \" \",\n  \"b\": \" \",\n  \"c\": \" \",\n  \"d\": \" \",\n  \"e\": \"\\n\",\n  \"f\": \"\\n\",\n  \"g\": \"…"
  emit: "---\na: ' '\nb: ' '\nc: \" \"\nd: \" \"\ne: '\n\n  '\nf: \"\\n\"\ng: '\n\n\n  '\nh: \"\\n\\n\"\n"
