tests/snapshots/yaml_suite_snapshots__yaml_suite_NB6Z_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Multiline plain value with tabs on empty lines
  from: "@perlpunk"
  tags: scalar whitespace
  yaml: "key:\n  value\n  with\n  —»\n  tabs\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value with\\ntabs\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"key\": \"value with\\ntabs\"\n}\n"
  dump: "key: 'value with\n\n  tabs'\n"
