tests/snapshots/yaml_suite_snapshots__yaml_suite_NB6Z_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "key: 'value with\n\n  tabs'\n"
  from: "@perlpunk"
  json: "{\n  \"key\": \"value with\\ntabs\"\n}\n"
  name: Multiline plain value with tabs on empty lines
  tags: scalar whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :key\n   =VAL :value with\\ntabs\n  -MAP\n -DOC\n-STR\n"
  yaml: "key:\n  value\n  with\n  —»\n  tabs\n"
