tests/snapshots/yaml_suite_snapshots__yaml_suite_NHX8_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Empty Lines at End of Document
  from: NimYAML tests
  tags: empty-key whitespace
  yaml: ":\n↵\n↵\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  emit: ":\n"
