tests/snapshots/yaml_suite_snapshots__yaml_suite_NHX8_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- emit: ":\n"
  from: NimYAML tests
  name: Empty Lines at End of Document
  tags: empty-key whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  yaml: ":\n↵\n↵\n"
